Finished refactoring. Adding fifty move counter.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "displayer",
+        "KQRBNP",
+        "KQRNBP",
         "omputer",
         "rnbqkbnr",
         "uman"
